fix scrollbar

--- a/src/sass/blocks/care.scss
+++ b/src/sass/blocks/care.scss
@@ -100,5 +100,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
+  display: none;
+  height: 0;
+  width: 0
 }
